segundo commit millie

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Machu Picchu - Maravilla del Mundo</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -12,6 +15,7 @@
             <ul>
                 <li><a href="#inicio">Inicio</a></li>
                 <li><a href="#historia">Historia</a></li>
+                <li><a href="#acerca">Acerca</a></li>
                 <li><a href="#galeria">Galería</a></li>
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
@@ -35,6 +39,19 @@
                         <li>Ubicación: Cusco, Perú</li>
                         <li>Declarada: Patrimonio de la Humanidad en 1983</li>
                     </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="acerca" class="about info-section">
+            <h2>Acerca</h2>
+            <div class="content">
+                <p>Esta página ofrece información sobre Machu Picchu, su historia, su importancia cultural y datos prácticos para visitantes. Está pensada para ayudar a quienes desean conocer más sobre esta maravilla del mundo y planificar una visita responsable.</p>
+                <div class="info-box">
+                    <h3>Misión</h3>
+                    <p>Difundir conocimiento y promover el turismo sostenible en Machu Picchu.</p>
+                    <h3>Visión</h3>
+                    <p>Ser una referencia accesible y respetuosa sobre la conservación del patrimonio inca.</p>
                 </div>
             </div>
         </section>
